SET( Utilities_SOURCES 
  src/RootUtils.cpp
  src/BCBackgroundPar.cpp
  src/BackgroundFitter.cpp
 )

INCLUDE_DIRECTORIES ( ./include )

ADD_LIBRARY( FCalUtils SHARED ${Utilities_SOURCES} )
TARGET_LINK_LIBRARIES( FCalUtils ${ROOT_LIBRARIES}  )

ADD_EXECUTABLE( BCBackgroundPar src/BCBackgroundPar.cpp src/BackgroundFitter.cpp )
TARGET_LINK_LIBRARIES( BCBackgroundPar ${ROOT_LIBRARIES}  )

ADD_EXECUTABLE( LCalTune src/LCalTune.cpp )
TARGET_LINK_LIBRARIES( LCalTune ${ROOT_LIBRARIES} FCalUtils )

IF ( CPPCHECK_FOUND )
  ADD_CPPCHECK( FCalUtils UNUSED_FUNCTIONS STYLE POSSIBLE_ERRORS FORCE FAIL_ON_WARNINGS)
  ADD_CPPCHECK( BCBackgroundPar UNUSED_FUNCTIONS STYLE POSSIBLE_ERRORS FORCE FAIL_ON_WARNINGS)
ENDIF()

INSTALL( TARGETS
  FCalUtils
  LIBRARY DESTINATION lib)

INSTALL( TARGETS
  BCBackgroundPar
  DESTINATION bin)
